fix: no horizontal scroll

--- a/migration-to-ts/src/global.scss
+++ b/migration-to-ts/src/global.scss
@@ -7,6 +7,10 @@ $scrollbar-color: #555;
   overflow-anchor: none !important;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     color: $color-secondary;
     background: #17181c;
